# video_space_express

./: .gitignore  BUILD.md  CLAUDE.md  README.md  TAURI_INTEGRATION.md  build-frontend.js  build.bat  build.sh  package-lock.json  package.json  server.js  tauri.conf.json  video_space.html
.claude/: settings.local.json
.github/scripts/: post-build.sh
.github/workflows/: build.yml
src-tauri/: Cargo.toml  windows.json
src-tauri/icons/: README.md
src-tauri/src/: main.rs
