[package]
name = "video-space"
version = "1.2.0"
description = "视频播放应用，支持多集视频管理和播放"
authors = ["Video Space Team"]
edition = "2021"
rust-version = "1.70.0"

[lib]
name = "video_space_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "video-space"
path = "src/main.rs"

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "process"] }
webbrowser = "0.8"
sysinfo = "0.30"
log = "0.4"
env_logger = "0.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]

[profile.dev]
incremental = true
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true